--- a/swe/package.json
+++ b/swe/package.json
@@ -16,5 +16,11 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "save-dev": "^0.0.1-security"
+  },
+  "jest": {
+    "verbose": true
+  },
+  "devDependencies": {
+    "jest-circus": "^29.7.0"
   }
 }
